[metadata]
name = acre-lib
version = 0.2.0a1
description=acre step library for BDD testing

[options.packages.find]
where = src/

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd[bdd-xml]
    junit.xml
    lxml
    selenium
    DevOpsAPI>=0.1.1
    configobj
    acrelib @ git+https://github.com/acre-bdd/acrelib.git
    

package_dir =
    =src

[bdist_wheel]
universal=1
