[metadata]
name = acre-lib
version = 0.3.0a2
description=acre step library for BDD testing

[options.packages.find]
where = .
include = acre*

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd[bdd-xml]
    junit.xml
    lxml
    selenium
    DevOpsAPI>=0.1.1
    configobj
    pylogx>=1.0.0
    
package_dir =
    =.

[bdist_wheel]
universal=1
